--- a/1/домашнее_задание/3.html
+++ b/1/домашнее_задание/3.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Homework</title>
 </head>
+
 <body>
-<!--
+  <!--
 Обязательное задание.
 
 Необходимо вывести в консоль значения выражений:
@@ -27,10 +29,12 @@
 */
 console.log(3 - 4 * 2);
 -->
-<script>
-  "use strict";
+  <script>
+    "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
-</script>
+
+    console.log(10 + 10 + "10");
+  </script>
 </body>
+
 </html>
