--- a/1/домашнее_задание/1.html
+++ b/1/домашнее_задание/1.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Homework</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Homework</title>
-</head>
-
-<body>
-  <!--
+  <body>
+    <!--
 Обязательное задание.
 
 Необходимо пользователя попросить ввести температуру в градусах Цельсия,
@@ -21,15 +20,14 @@
 
 Уточнение: пользователь всегда вводит корректное число.
 -->
-  <script>
-    "use strict";
+    <script>
+      "use strict";
 
-    const C = prompt('Введите температуру в градусах Цельсия');
+      const C = prompt("Введите температуру в градусах Цельсия");
 
-    const F = (9 / 5) * C + 32;
+      const F = (9 / 5) * C + 32;
 
-    alert(`Цельсий: ${C}, Фаренгейт: ${F}`);
-  </script>
-</body>
-
+      alert(`Цельсий: ${C}, Фаренгейт: ${F}`);
+    </script>
+  </body>
 </html>
