--- a/1/домашнее_задание/2.html
+++ b/1/домашнее_задание/2.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Homework</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Homework</title>
-</head>
-
-<body>
-  <!--
+  <body>
+    <!--
 Обязательное задание.
 
 Необходимо создать переменную name, записать в эту переменную свое имя.
@@ -15,13 +14,12 @@
 из переменной name.
 Вывести значение переменной admin в консоль.
 -->
-  <script>
-    "use strict";
+    <script>
+      "use strict";
 
-    let name = 'Раиль';
-    let admin = name;
-    console.log(admin);
-  </script>
-</body>
-
+      let name = "Раиль";
+      let admin = name;
+      console.log(admin);
+    </script>
+  </body>
 </html>
