--- a/1/домашнее_задание/3.html
+++ b/1/домашнее_задание/3.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Homework</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Homework</title>
-</head>
-
-<body>
-  <!--
+  <body>
+    <!--
 Обязательное задание.
 
 Необходимо вывести в консоль значения выражений:
@@ -29,12 +28,44 @@
 */
 console.log(3 - 4 * 2);
 -->
-  <script>
-    "use strict";
+    <script>
+      "use strict";
 
+      /*
+	1. 10 плюс 10 получаем 20.
+	2. Число 20 плюс строка "10" - получаем строку "2010" (конкатенация).
+	3. С помощью console.log выводим строку "2010" в консоль.
+	*/
+      console.log(10 + 10 + "10");
 
-    console.log(10 + 10 + "10");
-  </script>
-</body>
+      /*
+			1. Число 10 плюс строка "10" - получаем строку "1010".
+			2. Строка "1010" плюс число 10 - получаем строку "101010".
+			3. С помощью console.log выводим строку "101010" в консоль.
+			*/
+      console.log(10 + "10" + 10);
 
+      /*
+			1. 10 плюс 10 получаем 20.
+			2. С помощью унарного плюса строка "10" преобразуется в число 10.
+			3. 20 плюс 10 получаем 30.
+			4. С помощью console.log выводим число 30 в консоль.
+			*/
+      console.log(10 + 10 + +"10");
+
+      /*
+			1. Пустая строка "" приводится к 0.
+			2. 10 разделить на -0 получится -infinity.
+			3. С помощью console.log выводим -infinity в консоль.
+			*/
+      console.log(10 / -"");
+
+      /*
+			1. Преобразование строки "2,5" в число даёт NaN (ошибка чтения ,).
+			2. Результат любого математическое выражения с NaN есть NaN.
+			3. С помощью console.log выводим NaN в консоль.
+			*/
+      console.log(10 / +"2,5");
+    </script>
+  </body>
 </html>
