--- a/2/домашнее_задание/1.html
+++ b/2/домашнее_задание/1.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Homework</title>
-</head>
-<body>
-<!--
+  <head>
+    <meta charset="UTF-8" />
+    <title>Homework</title>
+  </head>
+  <body>
+    <!--
 Обязательное задание.
 
 Для кода вставленного в теге script необходимо дать комментарии, почему мы
@@ -14,37 +14,53 @@
 Подсказка. Чтобы лучше разобраться возьмите этот код и запустите в отладчике в
 браузере со включенными точками остановки.
 -->
-<script>
-  "use strict";
+    <script>
+      "use strict";
 
-  let a = 1, b = 1, c, d;
+      let a = 1,
+        b = 1,
+        c,
+        d;
 
-  /*
+      /*
   Ваш комментарий, почему переменная `c` хранит данное значение?
+	Происходит инкремент переменной "a" в префиксной форме (увеличение на 1 и 
+	возврат нового значения (2)), затем присваивание этого значения переменной "c"
    */
-  c = ++a;
-  console.log(c);
+      c = ++a;
+      console.log(c);
 
-  /*
+      /*
   Ваш комментарий, почему переменная `d` хранит данное значение?
+	Происходит инкремент переменной "b" в постфиксной форме (увеличение на 1 и 
+	возврат старого значения (1)), затем присваивание этого значения
+	 переменной "d"
    */
-  d = b++;
-  console.log(d);
+      d = b++;
+      console.log(d);
 
-  /*
+      /*
   Ваш комментарий, почему переменная `c` хранит данное значение?
+	Происходит инкремент переменной "a" в префиксной форме (увеличение на 1 и 
+	возврат нового значения (3)), затем сложение и присваивание нового значения
+	 переменной "c"
    */
-  c = 2 + ++a;
-  console.log(c);
+      c = 2 + ++a;
+      console.log(c);
 
-  /*
+      /*
   Ваш комментарий, почему переменная `d` хранит данное значение?
+	Происходит инкремент переменной "b" в постфиксной форме (увеличение на 1 и 
+	возврат старого значения (2)), затем сложение и присваивание нового значения
+	 переменной "d"
    */
-  d = 2 + b++;
-  console.log(d);
+      d = 2 + b++;
+      console.log(d);
 
-  console.log(a);
-  console.log(b);
-</script>
-</body>
+      console.log(a);
+      // в результате двух инкрементов результат переменной a равно 3
+      console.log(b);
+      // в результате двух инкрементов результат переменной b равно 3
+    </script>
+  </body>
 </html>
