--- a/2/домашнее_задание/1.html
+++ b/2/домашнее_задание/1.html
@@ -41,18 +41,18 @@
 
       /*
   Ваш комментарий, почему переменная `c` хранит данное значение?
-	Происходит инкремент переменной "a" в префиксной форме (увеличение на 1 и 
-	возврат нового значения (3)), затем сложение и присваивание нового значения
-	 переменной "c"
+	Происходит инкремент переменной "a"(приоритет унарного плюса выше бинарного) 
+	в префиксной форме (увеличение на 1 и возврат нового значения (3)), затем 
+	сложение и присваивание нового значения переменной "c"
    */
       c = 2 + ++a;
       console.log(c);
 
       /*
   Ваш комментарий, почему переменная `d` хранит данное значение?
-	Происходит инкремент переменной "b" в постфиксной форме (увеличение на 1 и 
-	возврат старого значения (2)), затем сложение и присваивание нового значения
-	 переменной "d"
+	Происходит инкремент переменной "b"(приоритет унарного плюса выше бинарного) 
+	в постфиксной форме (увеличение на 1 и возврат старого значения (2)), затем 
+	сложение и присваивание нового значения переменной "d"
    */
       d = 2 + b++;
       console.log(d);
