--- a/2/домашнее_задание/4.html
+++ b/2/домашнее_задание/4.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Homework</title>
-</head>
-<body>
-<!--
+  <head>
+    <meta charset="UTF-8" />
+    <title>Homework</title>
+  </head>
+  <body>
+    <!--
 Обязательное задание.
 
 Необходимо реализовать четыре функции, каждая функция должна принимать по два
@@ -28,10 +28,61 @@
 
 Необходимо для всех функций прописать комментарии jsdoc https://jsdoc.app/.
 -->
-<script>
-  "use strict";
+    <script>
+      "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
-</script>
-</body>
+      /**
+       * Функция сложения двух чисел.
+       * @param {number} num1 Первое число.
+       * @param {number} num2 Второе число.
+       * @returns {number} Результат суммы двух чисел.
+       */
+      function sum(num1, num2) {
+        return num1 + num2;
+      }
+
+      /**
+       * Функция разности двух чисел.
+       * @param {number} num1 Первое число.
+       * @param {number} num2 Второе число.
+       * @returns {number} Результат разности двух чисел, из большего вычитается
+       * меньшее.
+       */
+      function sub(num1, num2) {
+        if (num1 > num2) {
+          return num1 - num2;
+        } else if (num2 > num1) {
+          return num2 - num1;
+        } else {
+          return 0;
+        }
+      }
+
+      /**
+       * Функция произведения двух чисел.
+       * @param {number} num1 Первое число.
+       * @param {number} num2 Второе число.
+       * @returns {number} Результат произведения двух чисел.
+       */
+      function mult(num1, num2) {
+        return num1 * num2;
+      }
+
+      /**
+       * Функция деления двух чисел.
+       * @param {number} num1 Первое число.
+       * @param {number} num2 Второе число.
+       * @returns {number} Результат деления двух чисел.
+       */
+      function div(num1, num2) {
+        return num1 / num2;
+      }
+
+      console.log(sum(2, 8));
+      console.log(sub(2, 8));
+      console.log(sub(8, 8));
+      console.log(mult(2, 8));
+      console.log(div(8, 2));
+    </script>
+  </body>
 </html>
