--- a/3/домашнее_задание/1.html
+++ b/3/домашнее_задание/1.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Homework</title>
-</head>
-<body>
-<!--
+  <head>
+    <meta charset="UTF-8" />
+    <title>Homework</title>
+  </head>
+  <body>
+    <!--
 Обязательное задание.
 
 Необходимо с помощью цикла for вывести следующие 11 строк в консоль:
@@ -16,10 +16,16 @@
 …
 10 – четное число
 -->
-<script>
-  "use strict";
+    <script>
+      "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
-</script>
-</body>
+      for (let i = 0; i < 11; i++) {
+        if (i === 0) {
+          console.log(`${i} - это ноль`);
+        } else if (i % 2 === 0) {
+          console.log(`${i} - это четное число`);
+        } else console.log(`${i} - это нечетное число`);
+      }
+    </script>
+  </body>
 </html>
