--- a/3/домашнее_задание/4.html
+++ b/3/домашнее_задание/4.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Homework</title>
-</head>
-<body>
-<!--
+  <head>
+    <meta charset="UTF-8" />
+    <title>Homework</title>
+  </head>
+  <body>
+    <!--
 Обязательное задание.
 
 1. Необходимо вывести в консоль массив продуктов в котором есть хоть одна
@@ -14,37 +14,42 @@
 начиная с самой маленькой, заканчивая самой большой ценой, после чего вывести
 отсортированный массив в консоль.
 -->
-<script>
-  "use strict";
+    <script>
+      "use strict";
 
-  const products = [
-    {
-      id: 3,
-      price: 127,
-      photos: [
-        "1.jpg",
-        "2.jpg",
-      ],
-    },
-    {
-      id: 5,
-      price: 499,
-      photos: [],
-    },
-    {
-      id: 10,
-      price: 26,
-      photos: [
-        "3.jpg",
-      ],
-    },
-    {
-      id: 8,
-      price: 78,
-    },
-  ];
+      const products = [
+        {
+          id: 3,
+          price: 127,
+          photos: ["1.jpg", "2.jpg"],
+        },
+        {
+          id: 5,
+          price: 499,
+          photos: [],
+        },
+        {
+          id: 10,
+          price: 26,
+          photos: ["3.jpg"],
+        },
+        {
+          id: 8,
+          price: 78,
+        },
+      ];
+      //1.----------------------------
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
-</script>
-</body>
+      const productsWithPhoto = products.filter(
+        (element) => element.photos && element.photos.length !== 0
+      );
+      console.log(productsWithPhoto);
+
+      //2.----------------------------
+      const productsPriceSort = products.sort(
+        (price1, price2) => price1.price - price2.price
+      );
+      console.log(productsPriceSort);
+    </script>
+  </body>
 </html>
