--- a/3/домашнее_задание/1.html
+++ b/3/домашнее_задание/1.html
@@ -24,7 +24,9 @@
           console.log(`${i} - это ноль`);
         } else if (i % 2 === 0) {
           console.log(`${i} - это четное число`);
-        } else console.log(`${i} - это нечетное число`);
+        } else {
+          console.log(`${i} - это нечетное число`);
+        }
       }
     </script>
   </body>
