--- a/3/домашнее_задание/4.html
+++ b/3/домашнее_задание/4.html
@@ -46,10 +46,9 @@
       console.log(productsWithPhoto);
 
       //2.----------------------------
-      const productsPriceSort = products.sort(
-        (price1, price2) => price1.price - price2.price
+      console.log(
+        products.sort((element1, element2) => element1.price - element2.price)
       );
-      console.log(productsPriceSort);
     </script>
   </body>
 </html>
