--- a/4/домашнее_задание/2.html
+++ b/4/домашнее_задание/2.html
@@ -50,7 +50,81 @@
     <script>
       "use strict";
 
-      // Здесь пишем решение, данный комментарий необходимо стереть.
+      // ES5------------------
+      //Попытался сделать postDate методом, правильно ли?
+      function newDate() {
+        return (this.postDate = new Date().toLocaleString("ru", {
+          day: "numeric",
+          month: "long",
+          year: "numeric",
+          hour: "numeric",
+          minute: "numeric",
+        }));
+      }
+      function PostES5(postAutorName, postText) {
+        this.postAutorName = postAutorName;
+        this.postText = postText;
+        this.postDate = newDate.call(this);
+      }
+
+      PostES5.prototype.edit = function (postEditText) {
+        this.postText = postEditText;
+        this.postDate = newDate.call(this);
+      };
+
+      function AttachedPostES5(postAutorName, postText) {
+        PostES5.call(this, postAutorName, postText);
+        this.highlighted = false;
+      }
+      AttachedPostES5.prototype = Object.create(PostES5.prototype);
+      AttachedPostES5.prototype.constructor = AttachedPostES5;
+
+      AttachedPostES5.prototype.makeTextHighlighted = function () {
+        this.highlighted = true;
+        this.postDate = newDate.call(this);
+      };
+
+      // ES6----------------
+      class PostES6 {
+        constructor(postAutorName, postText) {
+          this.postAutorName = postAutorName;
+          this.postText = postText;
+          this.postDate = newDate.call(this);
+        }
+        edit(postEditText) {
+          this.postText = postEditText;
+          this.postDate = newDate.call(this);
+        }
+      }
+
+      class AttachedPostES6 extends PostES6 {
+        constructor(postAutorName, postText) {
+          super(postAutorName, postText);
+          this.highlighted = false;
+        }
+        makeTextHighlighted() {
+          this.highlighted = true;
+          this.postDate = newDate.call(this);
+        }
+      }
+
+      const post1 = new PostES5("rail", "Мой первый пост");
+      console.log(post1);
+      post1.edit("Измененный пост");
+      console.log(post1);
+
+      const post2 = new AttachedPostES5("rail", "подсвеченный постES5");
+      post2.makeTextHighlighted();
+      console.log(post2);
+
+      const post3 = new PostES6("rail", "Мой второй пост");
+      console.log(post3);
+      post3.edit("Измененый пост");
+      console.log(post3);
+
+      const post4 = new AttachedPostES6("rail", "подсвеченный постES6");
+      post4.makeTextHighlighted();
+      console.log(post4);
     </script>
   </body>
 </html>
