--- a/4/домашнее_задание/2.html
+++ b/4/домашнее_задание/2.html
@@ -109,7 +109,7 @@
       }
 
       const post1 = new PostES5("rail", "Мой первый пост");
-      console.log(post1);
+      console.table({ post1 });
       post1.edit("Измененный пост");
       console.log(post1);
 
