--- a/4/домашнее_задание/3.html
+++ b/4/домашнее_задание/3.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Homework</title>
-</head>
-<body>
-<!--
+  <head>
+    <meta charset="UTF-8" />
+    <title>Homework</title>
+  </head>
+  <body>
+    <!--
 Необязательное задание.
 
-Необходимо создать функцию getDigitsOfNumber, которая принимает целое
+Необходимо создать функцию getDigitsOfuserNumber, которая принимает целое
 положительное число в диапазоне от 0 до 1000.
 Функция должна вернуть обычный объект с тремя свойствами:
 1. units - содержит число, количество единиц в параметре функции.
@@ -28,10 +28,52 @@
 Обратите внимание на слова "от 0 до 1000", это означает диапазон [0, 999], что
 можно прочитать как "от нуля до 999 включительно".
 -->
-<script>
-  "use strict";
+    <script>
+      "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
-</script>
-</body>
+      /**
+       * Функция, разделяющая число на разряды
+       * @param {number} userNumber получаемое число
+       * @return {object} объект, разделенный по разрядам, либо пустой объект
+       * в случае ошибки
+       */
+      function getDigitsOfuserNumber(userNumber) {
+        if (
+          userNumber < 0 ||
+          userNumber > 1000 ||
+          !Number.isInteger(userNumber)
+        ) {
+          console.error("Вы ввели неверное число");
+          return {};
+        }
+        return {
+          units: userNumber % 10,
+          dozens: Math.trunc(userNumber / 10) % 10,
+          hundreds: Math.trunc(userNumber / 100) % 10,
+        };
+      }
+
+      const num1 = getDigitsOfuserNumber(753);
+      console.log(
+        `Сотни: ${num1.hundreds}, десятки: ${num1.dozens}, единицы: ${num1.units}`
+      );
+
+      //class GetDigitsOfuserNumber {
+      //  constructor(userNumber) {
+      //    if (
+      //      (typeof userNumber === "number" && !isNaN(userNumber)) ||
+      //      userNumber < 0 ||
+      //      userNumber > 1000 ||
+      //      !Number.isInteger(userNumber)
+      //    ) {
+      //      console.error("Вы ввели неверное число");
+      //      return {};
+      //    }
+      //    this.units = userNumber % 10;
+      //    this.dozens = Math.trunc(userNumber / 10) % 10;
+      //    this.hundreds = Math.trunc(userNumber / 100) % 10;
+      //  }
+      //}
+    </script>
+  </body>
 </html>
