--- a/4/домашнее_задание/2.html
+++ b/4/домашнее_задание/2.html
@@ -51,25 +51,20 @@
       "use strict";
 
       // ES5------------------
-      //Попытался сделать postDate методом, правильно ли?
-      function newDate() {
-        return (this.postDate = new Date().toLocaleString("ru", {
-          day: "numeric",
-          month: "long",
-          year: "numeric",
-          hour: "numeric",
-          minute: "numeric",
-        }));
+
+      function sleep(ms) {
+        return new Promise((resolve) => setTimeout(resolve, ms));
       }
+
       function PostES5(postAutorName, postText) {
-        this.postAutorName = postAutorName;
-        this.postText = postText;
-        this.postDate = newDate.call(this);
+        this.autorName = postAutorName;
+        this.text = postText;
+        this.date = new Date();
       }
 
       PostES5.prototype.edit = function (postEditText) {
-        this.postText = postEditText;
-        this.postDate = newDate.call(this);
+        this.text = postEditText;
+        this.date = new Date();
       };
 
       function AttachedPostES5(postAutorName, postText) {
@@ -81,37 +76,35 @@
 
       AttachedPostES5.prototype.makeTextHighlighted = function () {
         this.highlighted = true;
-        this.postDate = newDate.call(this);
+        this.date = new Date();
       };
 
       // ES6----------------
       class PostES6 {
         constructor(postAutorName, postText) {
-          this.postAutorName = postAutorName;
-          this.postText = postText;
-          this.postDate = newDate.call(this);
+          this.autorName = postAutorName;
+          this.text = postText;
+          this.date = new Date();
         }
         edit(postEditText) {
-          this.postText = postEditText;
-          this.postDate = newDate.call(this);
+          this.text = postEditText;
+          this.date = new Date();
         }
       }
 
       class AttachedPostES6 extends PostES6 {
-        constructor(postAutorName, postText) {
-          super(postAutorName, postText);
-          this.highlighted = false;
-        }
+        highlighted = false;
+
         makeTextHighlighted() {
           this.highlighted = true;
-          this.postDate = newDate.call(this);
+          this.date = new Date();
         }
       }
 
       const post1 = new PostES5("rail", "Мой первый пост");
-      console.table({ post1 });
+      console.log({ post1 });
       post1.edit("Измененный пост");
-      console.log(post1);
+      console.log({ post1 });
 
       const post2 = new AttachedPostES5("rail", "подсвеченный постES5");
       post2.makeTextHighlighted();
