--- a/5/домашнее_задание/3.html
+++ b/5/домашнее_задание/3.html
@@ -53,53 +53,53 @@
       "use strict";
 
       /*
-      1. Необходимо вывести сообщение в консоль "все теги прогрузились", когда все
-      теги будут созданы браузером.
-      */
+1. Необходимо вывести сообщение в консоль "все теги прогрузились", когда все
+теги будут созданы браузером.
+*/
       document.addEventListener("DOMContentLoaded", () => {
         console.log("Все теги прогрузились");
       });
       /*
-      2. Необходимо вывести сообщение в консоль "страница загрузилась", когда все
-      ресурсы страницы будут загружены.
-      */
-      window.onload = function () {
+			2. Необходимо вывести сообщение в консоль "страница загрузилась", когда все
+			ресурсы страницы будут загружены.
+			*/
+      window.addEventListener("load", () => {
         console.log("Страница загрузилась");
-      };
-      /*
-      3. При клике на какой-либо тег на странице в консоль должно выводиться
-      сообщение наподобии:
-      Класс "super_element" присутствует в элементе "div".
-      сообщение должно определять присутствует или отсутствует класс "super_element"
-      у элемента, а также выводить в нижнем регистре верный тег в данной строке, по
-      которому был совершен клик.
-      Необходимо использовать делегирование.
-      */
-      const superElement = document.body.addEventListener("click", (el) => {
-        if (el.target.classList.contains("super_element")) {
-          console.log(
-            `Класс "super_element" присутствует в элементе "${el.target.tagName.toLowerCase()}"`
-          );
-        } else
-          console.log(
-            `Класс "super_element" отсутствует в элементе "${el.target.tagName.toLowerCase()}"`
-          );
       });
+
       /*
-      4. Сделайте, чтобы при наведении на textarea в консоли появлялось сообщение:
-      "Вы навели на textarea."
-       */
+				3. При клике на какой-либо тег на странице в консоль должно выводиться
+				сообщение наподобии:
+				Класс "super_element" присутствует в элементе "div".
+				сообщение должно определять присутствует или отсутствует класс "super_element"
+				у элемента, а также выводить в нижнем регистре верный тег в данной строке, по
+				которому был совершен клик.
+				Необходимо использовать делегирование.
+				*/
+      document.addEventListener("click", (event) => {
+        const containStr = event.target.classList.contains("super_element")
+          ? "присутствует"
+          : "отсутствует";
+        console.log(
+          `Класс "super_element" ${containStr} в элементе "${event.target.tagName.toLowerCase()}".`
+        );
+      });
+
+      /*
+				4. Сделайте, чтобы при наведении на textarea в консоли появлялось сообщение:
+				"Вы навели на textarea."
+					*/
       const textArea = document.querySelector("textarea");
       textArea.addEventListener("mouseenter", () =>
         console.log("Вы навели на textarea")
       );
       /*
-      5. Необходимо повесить событие клика на тег ul. В обработчике события в
-      консоль необходимо выводить текст, который записан внутри элемента кнопки,
-      по которой был произведен клик.
-      Если клик был не по кнопке, то ничего выводить не нужно.
-      Необходимо использовать делегирование.
-       */
+5. Необходимо повесить событие клика на тег ul. В обработчике события в
+консоль необходимо выводить текст, который записан внутри элемента кнопки,
+по которой был произведен клик.
+Если клик был не по кнопке, то ничего выводить не нужно.
+Необходимо использовать делегирование.
+	*/
       document.querySelector("ul").addEventListener("click", (event) => {
         if (event.target.tagName !== "BUTTON") {
           return;
@@ -107,18 +107,17 @@
         console.log(event.target.innerText);
       });
       /*
-      6. Вопрос: Почему в console.log пишется сначала текст из 5 задания и только
-      потом выводится текст из 3 задания, если мы кликаем по кнопкам в ul?
-      Ответ необходимо написать здесь же, под этим комментарием, своими словами.
-      */
+			6. Вопрос: Почему в console.log пишется сначала текст из 5 задания и только
+			потом выводится текст из 3 задания, если мы кликаем по кнопкам в ul?
+			Ответ необходимо написать здесь же, под этим комментарием, своими словами.
+			*/
 
-      /* Ответ: происходит "всплытие события" - сначала обработчик срабатывает 
-      на элементе(button), затем на родителе(body).
-      */
+      /* Ответ: происходит "всплытие события" - сначала обработчик срабатывает на элементе(button), затем на родителе(body).
+       */
 
       /*
-      7. С помощью JS необходимо изменить цвет заднего фона каждого второго тега li.
-       */
+		7. С помощью JS необходимо изменить цвет заднего фона каждого второго тега li.
+			*/
       const liSecond = document.querySelectorAll("li:nth-child(2n)");
       liSecond.forEach((item) => (item.style.backgroundColor = "orange"));
     </script>
