--- a/6/домашнее_задание/3.html
+++ b/6/домашнее_задание/3.html
@@ -1,57 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
-  <style>
-    i {
-      font-size: 50px;
-    }
-    .golden {
-      color: gold;
-    }
-  </style>
-</head>
-<body>
-<!--
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+      crossorigin="anonymous"
+    />
+    <style>
+      i {
+        font-size: 50px;
+      }
+      .golden {
+        color: gold;
+      }
+    </style>
+  </head>
+  <body>
+    <!--
 Обязательное задание.
 
 Выполнить все задачи в теге script. Комментарии, в которых написаны задачи, не
 стирать, код с решением задачи пишем под комментарием.
 -->
 
-<div class="stars_container">
-  <i class="fas fa-star"></i>
-  <i class="fas fa-star"></i>
-  <i class="fas fa-star"></i>
-  <i class="fas fa-star"></i>
-  <i class="fas fa-star"></i>
-</div>
+    <div class="stars_container">
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+    </div>
 
-<script>
-  "use strict";
+    <script>
+      "use strict";
 
-  /*
-  1. При наведении на любую из звезд, данной звезде должен ставиться класс
-  golden, также такой класс должен ставиться всем звездам до нее слева.
-  */
+      /*
+      1. При наведении на любую из звезд, данной звезде должен ставиться класс
+      golden, также такой класс должен ставиться всем звездам до нее слева.
+      */
+      const starsContainer = document.querySelector(".stars_container");
+      const star = starsContainer.querySelectorAll("i");
 
+      // Функция установки класса всем звездам до выбранной включительно
+      function goldenSet(index) {
+        for (let i = 0; i <= index; i++) {
+          star[i].classList.add("golden");
+        }
+      }
 
-  /*
-  2. Когда мы уводим курсор мыши от звезды, все поставленные классы из первого
-  задания должны быть удалены.
-   */
+      // Поиск индекса выбранной звезды
+      for (let elem of star) {
+        elem.addEventListener("mouseover", (event) => {
+          let elemTarget = event.target.closest(".fas");
+          let index = [...elemTarget.parentNode.children].indexOf(elemTarget);
+          goldenSet(index);
+        });
+      }
 
-
-  /*
-  3. Когда мы переводим мышь от одной звезды к другой, у нас могут мигать
-  звезды (временно могут становиться черными). Почему так? Напишите словами.
-  Можем ли мы это исправить? Если да, то предложите решение.
-  */
-
-
-</script>
-</body>
+      /*
+      2. Когда мы уводим курсор мыши от звезды, все поставленные классы из первого
+      задания должны быть удалены.
+       */
+      starsContainer.addEventListener("mouseout", (event) => {
+        for (let i = 0; i < star.length; i++) {
+          star[i].classList.remove("golden");
+        }
+      });
+      /*
+      3. Когда мы переводим мышь от одной звезды к другой, у нас могут мигать
+      звезды (временно могут становиться черными). Почему так? Напишите словами.
+      Можем ли мы это исправить? Если да, то предложите решение.
+      */
+      // Пропадает событие наведения. Можно вместо "mouseout" поставить "mouseleave"
+    </script>
+  </body>
 </html>
