--- a/6/домашнее_задание/3.html
+++ b/6/домашнее_задание/3.html
@@ -65,7 +65,7 @@
       2. Когда мы уводим курсор мыши от звезды, все поставленные классы из первого
       задания должны быть удалены.
        */
-      starsContainer.addEventListener("mouseout", (event) => {
+      starsContainer.addEventListener("mouseleave", (event) => {
         for (let i = 0; i < star.length; i++) {
           star[i].classList.remove("golden");
         }
@@ -75,7 +75,8 @@
       звезды (временно могут становиться черными). Почему так? Напишите словами.
       Можем ли мы это исправить? Если да, то предложите решение.
       */
-      // Пропадает событие наведения. Можно вместо "mouseout" поставить "mouseleave"
+      // (Пропадает событие наведения. Можно вместо "mouseout" поставить
+      // "mouseleave") - неверно. Всё дело в пробелах между звездами. Удалить
     </script>
   </body>
 </html>
