--- a/6/домашнее_задание/1.html
+++ b/6/домашнее_задание/1.html
@@ -42,16 +42,16 @@
       /*
       	1. Установите всем элементам с классом "productName" размер шрифта 24px.
         */
-      const nameElem = document.querySelectorAll(".productName");
-      for (let elem of nameElem) {
-        elem.style.fontSize = "24px";
-      }
+      document
+        .querySelectorAll(".productName")
+        .forEach((elem) => (elem.style.fontSize = "24px"));
+
       /*
         2. Установите всем элементам с классом "product" внешний отступ справа 50px.
        */
       const productElem = document.querySelectorAll(".product");
       for (let elem of productElem) {
-        elem.style.marginLeft = "50px";
+        elem.style.marginRight = "50px";
       }
       /*
         3. При клике на кнопку "В корзину" название кнопки должно поменяться на
@@ -68,7 +68,7 @@
         if (event.target.tagName === "BUTTON") {
           event.target.textContent = "Добавлено";
           event.target.disabled = true;
-        } else return;
+        }
       });
 
       /*
@@ -85,9 +85,7 @@
         .querySelector("img")
         .setAttribute("src", "https://picsum.photos/id/1080/200/300");
       productClone.querySelector(".productName").textContent = "Товар 4";
-      productElem[productElem.length - 1].remove();
-      document.body.append(productClone);
-
+      productElem[productElem.length - 1].replaceWith(productClone);
       /*
         5. По истечению 2 секунд с момента открытия страницы первый товар должен быть
         удален из html.
