--- a/7/домашнее_задание/1.html
+++ b/7/домашнее_задание/1.html
@@ -65,18 +65,16 @@
         H99: "Однако, программирование, в итоге, принесет свои плоды.",
       };
 
+      let activeEl = document.querySelector(".active");
+      const textEl = document.querySelector("div.text");
       document.querySelector(".nav").addEventListener("click", ({ target }) => {
         if (!target.classList.contains("nav-link")) {
           return;
         }
-
-        document
-          .querySelectorAll(".nav-link")
-          .forEach((el) => el.classList.remove("active"));
-
+        activeEl.classList.remove("active");
         target.classList.add("active");
-        document.querySelector(".text").textContent =
-          panelText[target.parentNode.dataset.text];
+        activeEl = target;
+        textEl.textContent = panelText[target.parentNode.dataset.text];
       });
       /*
       2. Необходимо сделать так, чтобы при изменении input'а менялся и размер шрифта
@@ -86,8 +84,9 @@
        */
       const changeFont = document.querySelector("input");
       const loremText = document.getElementById("inputDiv");
+      changeFont.value = Number.parseInt(getComputedStyle(loremText).fontSize);
       changeFont.addEventListener("input", (event) => {
-        loremText.style.fontSize = changeFont.value / 30 + "em";
+        loremText.style.fontSize = event.target.value + "px";
       });
     </script>
   </body>
