end added product

--- a/8/домашнее_задание/index.html
+++ b/8/домашнее_задание/index.html
@@ -32,12 +32,13 @@
 
           <!-- Разметка для корзины -->
           <div class="basket hidden">
-            <div class="basketContent">
+            <div class="basketTitle">
               <div class="productName">Merch Name</div>
-              <div class="productAmount">Amount</div>
+              <div class="productAmount">Quantity</div>
               <div class="productPrice">Price per piece</div>
               <div class="productResult">Result</div>
             </div>
+            <div class="basketContent"></div>
             <div class="basketTotal">
               Goods in the amount of:
               <span class="basketTotalValue">0</span>
@@ -394,6 +395,6 @@
     </div>
 
     <script src="basket.js"></script>
-    <script src="app.js"></script>
+    <!--<script src="app.js"></script>-->
   </body>
 </html>
