--- a/8/домашнее_задание/index.html
+++ b/8/домашнее_задание/index.html
@@ -37,6 +37,7 @@
               <div class="productAmount">Quantity</div>
               <div class="productPrice">Price per piece</div>
               <div class="productResult">Result</div>
+              <div class="productDelete"></div>
             </div>
             <div class="basketContent"></div>
             <div class="basketTotal">
